Bug #39021
Several race conditions are possible between io::ObjectRequest and io::CopyupRequest
Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
luminous,mimic,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Description
The snap/parent locks are inconsistently held in numerous locations which could result in a race between IO execution and an image refresh. Additionally, nothing is currently preventing two copyup requests from executing concurrently once the parent image has been read (and it's removed from the in-flight copyup list).
Related issues
History
#1 Updated by Jason Dillaman about 2 years ago
- Status changed from New to In Progress
- Assignee set to Jason Dillaman
#2 Updated by Mykola Golub about 2 years ago
- Status changed from In Progress to Pending Backport
- Pull request ID set to 27357
#3 Updated by Nathan Cutler about 2 years ago
- Copied to Backport #39194: luminous: Several race conditions are possible between io::ObjectRequest and io::CopyupRequest added
#4 Updated by Nathan Cutler about 2 years ago
- Copied to Backport #39195: nautilus: Several race conditions are possible between io::ObjectRequest and io::CopyupRequest added
#5 Updated by Nathan Cutler about 2 years ago
- Copied to Backport #39196: mimic: Several race conditions are possible between io::ObjectRequest and io::CopyupRequest added
#6 Updated by Jason Dillaman almost 2 years ago
.... also include https://github.com/ceph/ceph/pull/27757
#7 Updated by Nathan Cutler 3 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".